CSCE434/pp4/samples/jon_badcontrol2.out

*** Error line 2.
    for (bool i = true; bool < 10; ++bool) {
         ^^^^
*** syntax error

